<resources>
    <string name="app_name">Quetrip</string>
    <string name="facebook_app_id" translatable="false">740939663052917</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb740939663052917</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appbar_scrolling_view_behavior2" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="server_issue">Server issue</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_google">Login with Google</string>
    <string name="login_email">Login with Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_text">Log in for easy access to your bookings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="havenotaccount">Haven\'t account?</string>
    <string name="signup_text">Sign up for easy access to your bookings</string>
    <string name="terms">Agree with <u>Terms &amp; Conditions</u></string>
    <string name="haveaccount">Have account?</string>
    <string name="fp_text">Please enter your email. We will send\npassword reset link to your email.</string>
    <string name="submit">Submit</string>
    <string name="enter_name">Enter name.</string>
    <string name="enter_email">Enter email.</string>
    <string name="enter_password">Enter password.</string>
    <string name="enter_valid_email">Enter valid email.</string>
    <string name="enter_phone">Enter phone number.</string>
    <string name="enter_valid_phone">Enter valid phone number.</string>
    <string name="enter_address">Enter address.</string>
    <string name="read_terms">Please read the terms and conditions.</string>
    <string name="registration_success">Registration successful</string>
    <string name="same_email">Someone already is using the same email.</string>
    <string name="registered_user">You have already been registered. Please log in.</string>
    <string name="login_success">Login successful</string>
    <string name="unregistered_user">You haven\'t been registered. Please sign up.</string>
    <string name="incorrect_password">Your password is incorrect.</string>
    <string name="check_email">We have sent a password reset link to your email. Please check.</string>
    <string name="home">Home</string>
    <string name="newtrip">New Trip</string>
    <string name="packages">Packages</string>
    <string name="mytrips">My Trips</string>
    <string name="account">Account</string>
    <string name="manage_account">Manage Account</string>
    <string name="my_profile">My Profile</string>
    <string name="bookings">Bookings</string>
    <string name="wishlist">Wishlist</string>
    <string name="favorites">Favorites</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="aboutus">About Us</string>
    <string name="contactus">Contact Us</string>
    <string name="contact_">Contact...</string>
    <string name="langauge">Language</string>
    <string name="language_">Language:</string>
    <string name="reset_password">Reset Password</string>
    <string name="logout">Log Out</string>
    <string name="name_">Name *</string>
    <string name="email_">Email *</string>
    <string name="phone_">Phone Number *</string>
    <string name="address_">Address *</string>
    <string name="logged_out">Logged Out</string>
    <string name="unexisting_account">Your account doesn\'t exist.</string>
    <string name="type_address">Type address...</string>
    <string name="select">Select</string>
    <string name="speech_error">Sorry! Your device doesn\'t support speech input</string>
    <string name="location_text">Please just try selecting correct location. You can type the address to search or you can click on the map to select correct location.</string>
    <string name="hint">Hint</string>
    <string name="select_location">Please select a location.</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_select_location">Are you sure you want to select this location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="location_info">Location Info</string>
    <string name="service_connection_suspended">Service connection suspended</string>
    <string name="service_connection_failed">We can not detect any internet connectivity. Please check your internet connection and try again.</string>
    <string name="get_started">Get Started</string>
    <string name="Andaraí">Andaraí</string>
    <string name="Ibicoara">Ibicoara</string>
    <string name="Igatu">Igatu</string>
    <string name="Iraquara">Iraquara</string>
    <string name="Itaete">Itaetê</string>
    <string name="Linen">Lençois</string>
    <string name="Hill_of_the_Hat">Morro do Chapéu</string>
    <string name="Mucuge">Mucugê</string>
    <string name="New_Redemption">Nova Redenção</string>
    <string name="Palm_trees">Palmeiras</string>
    <string name="Piatan">Piatã</string>
    <string name="Rio_de_Contas">Rio de Contas</string>
    <string name="Capão_Valley">Vale do Capão</string>
    <string name="you_want_go_here">You want to go here?</string>
    <string name="hotels">Hotels</string>
    <string name="hotel_">Hotel:</string>
    <string name="room_">Room:</string>
    <string name="rooms">Rooms</string>
    <string name="restaurants">Restaurants</string>
    <string name="attractions">Attractions</string>
    <string name="travel_packages">Travel Packages</string>
    <string name="guides">Guides</string>
    <string name="car_rents">Car Rents</string>
    <string name="tours">Tours</string>
    <string name="paved_road">Paved road</string>
    <string name="dirt_road">Dirt road</string>
    <string name="no_result_found">No result found...</string>
    <string name="read_more">Read More...</string>
    <string name="less">Less</string>
    <string name="book_tour">Book A Tour</string>
    <string name="highlights">Highlights</string>
    <string name="home_title">Discover amazing things to do wherever you go</string>
    <string name="trip_schedule">New Trip Schedule</string>
    <string name="trip_name">Trip Name</string>
    <string name="write_something">Write something...</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="howlong">How long?</string>
    <string name="how_many_travelers">Travelers</string>
    <string name="adult">Adult</string>
    <string name="adults">Adults</string>
    <string name="senior">Senior</string>
    <string name="child">Child</string>
    <string name="children">Children</string>
    <string name="sleeps">Sleeps</string>
    <string name="infant">Infant</string>
    <string name="select_city">Select a city for\n your trip</string>
    <string name="ready_trip_schedule">Please get your trip schedule ready</string>
    <string name="how_many_days_in_city">How many days in this city?</string>
    <string name="all_days">All days</string>
    <string name="or">OR</string>
    <string name="mytrip">My Trip</string>
    <string name="in_city">In the city</string>
    <string name="cancel">Cancel</string>
    <string name="wrong_schedule_time">Your schedule time is wrong.</string>
    <string name="from_to">From - To</string>
    <string name="select_trip_dates">Select dates of trip</string>
    <string name="select_stay_dates">Select dates to stay in the city.</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="enter_trip_caption">Enter a caption of your trip.</string>
    <string name="setup_travelers">Please setup count of the travelers, at least one.</string>
    <string name="exceeded_city_date">Your selected dates exceeded your trip schedule.</string>
    <string name="duplicated">Duplicated</string>
    <string name="warning">Warning!</string>
    <string name="you_agree">Do you agree?</string>
    <string name="edit_schedule"><u>Edit Schedule</u></string>
    <string name="in_schedule_cities">In-Schedule Cities</string>
    <string name="sure_delete_city">Are you sure you want to delete this city?</string>
    <string name="sure_delete">Are you sure you want to delete?</string>
    <string name="days">days</string>
    <string name="daily_schedule">Daily Schedule</string>
    <string name="day">Day</string>
    <string name="add_attractions">Add Attractions</string>
    <string name="add_services">Add Services</string>
    <string name="add_hotel">Add Hotel</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="city_to_stay">City where to stay</string>
    <string name="days_stay_in_city">days stay in city</string>
    <string name="services">Services</string>
    <string name="tourist_attrations">Tourist Attractions</string>
    <string name="add_menu">Please add menus.</string>
    <string name="add_room">Please choose rooms.</string>
    <string name="room_added">This room chosen.</string>
    <string name="name__">Name:</string>
    <string name="city_">City:</string>
    <string name="price_">Price:</string>
    <string name="weekly_price">Price/Week:</string>
    <string name="km_price">Price/km:</string>
    <string name="km_mins">Mins/km:</string>
    <string name="phone">Phone:</string>
    <string name="distance_">Distance:</string>
    <string name="walking_">Walking Route:</string>
    <string name="difficulty_">Difficulty:</string>
    <string name="type_">Type:</string>
    <string name="departure_time_">Departure:</string>
    <string name="total_time_">Total Time:</string>
    <string name="hours">hours</string>
    <string name="extension_">Extension:</string>
    <string name="comments">Comments</string>
    <string name="viewmyschedules">View My Schedules</string>
    <string name="satellite_mode">Satellite mode</string>
    <string name="keep_my_location_centered_always">Keep my location centered always</string>
    <string name="map_view">Map View</string>
    <string name="my_location">My Location</string>
    <string name="settings">Settings</string>
    <string name="reviews_">Reviews:</string>
    <string name="choose_room">Choose your room</string>
    <string name="pool">Pool</string>
    <string name="shuttle">Free Airport Shuttle</string>
    <string name="air_conditioning">Air Conditioning</string>
    <string name="breakfast">Breakfast Included</string>
    <string name="pet_friendly">Pet Friendly</string>
    <string name="wifi">Free WiFi</string>
    <string name="spa">Spa</string>
    <string name="parking">Free Parking</string>
    <string name="restaurant">Restaurant</string>
    <string name="city_view">City View</string>
    <string name="ocean_view">Partial Ocean View</string>
    <string name="sea_view">Sea View</string>
    <string name="cuisines_">Cuisines:</string>
    <string name="meals_">Meals:</string>
    <string name="status_">Status:</string>
    <string name="open_menu">Open Menu</string>
    <string name="browse_menu">Browse Menu</string>
    <string name="see_hours"><u>See hours...</u></string>
    <string name="see_on_map">See on map...</string>
    <string name="see_reviews">See reviews...</string>
    <string name="salty_pizza">Salty Pizza</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="portuguese">Portuguese</string>
    <string name="spanish">Spanish</string>
</resources>